// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shoud correctly render ExpensesSummary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totaling 
    $123.00
  </h1>
</div>
`;

exports[`shoud correctly render ExpensesSummary with multiple eexpenses 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totaling 
    $3,446,756,756.00
  </h1>
</div>
`;
